# AgentLiar

./: .env.example  ORCHESTRATOR_LOG.md  README.md  VERIFICATION_TRANSCRIPT.md  action.yml  pyproject.toml
examples/: complex_task.json  incomplete_task.json  simple_task.json
plans/: plan.md
src/agentliar/: __init__.py  api.py  cli.py  config.py  engine.py  exceptions.py  logging_config.py  report.py  scorer.py  server.py
src/agentliar/checks/: __init__.py  base.py  file_check.py  llm_judge.py  scope_check.py  test_check.py
tests/adversarial/: __init__.py  test_false_completion.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_config.py  test_file_check.py  test_scope_check.py  test_scorer.py  test_test_check.py
